force-app/main/default/objects/FEC_CustomerAdditionalInfo__c/FEC_CustomerAdditionalInfo__c.object-meta.xml
<CustomObject>
    <label>Customer Additional Info</label>
    <nameField>
        <label>Customer Additional Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customers Additional Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>