force-app/main/default/objects/FEC_CustomerAdditionalInfo__c/fields/FEC_CompositeKey__c.field-meta.xml
<CustomField>
    <fullName>FEC_CompositeKey__c</fullName>
    <externalId>true</externalId>
    <label>Composite Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>