force-app/main/default/objects/FEC_CustomerAdditionalInfo__c/fields/FEC_Config__c.field-meta.xml
<CustomField>
    <fullName>FEC_Config__c</fullName>
    <label>Customer Additional Info Config</label>
    <referenceTo>FEC_CustomerAdditionalInfoConfig__c</referenceTo>
    <relationshipLabel>Customers Additional Info</relationshipLabel>
    <relationshipName>Customers_Additional_Info</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>