force-app/main/default/objects/FEC_CustomerAdditionalInfo__c/fields/FEC_FieldValue__c.field-meta.xml
<CustomField>
    <fullName>FEC_FieldValue__c</fullName>
    <label>Field Value</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>