force-app/main/default/objects/FEC_CustomerAdditionalInfo__c/fields/FEC_IsActive__c.field-meta.xml
<CustomField>
    <fullName>FEC_IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>