force-app/main/default/objects/FEC_CustomerAdditionalInfo__c/fields/FEC_KeyIdentifier__c.field-meta.xml
<CustomField>
    <fullName>FEC_KeyIdentifier__c</fullName>
    <label>Key Identifier</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>