force-app/main/default/objects/FEC_CustomerAdditionalInfo__c/fields/FEC_KeyIDValue__c.field-meta.xml
<CustomField>
    <fullName>FEC_KeyIDValue__c</fullName>
    <externalId>true</externalId>
    <label>Key ID Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>