force-app/main/default/objects/FEC_CustomerAdditionalInfo__c/fields/FEC_LinkedFilename__c.field-meta.xml
<CustomField>
    <fullName>FEC_LinkedFilename__c</fullName>
    <label>Linked Filename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>